== master

== 0.9.1 / 2010-05-02

* Fix ActiveRecord 2.0.0 - 2.2.3 integrations failing if version info isn't already loaded
* Fix integration with dirty attribute tracking on DataMapper 0.10.3
* Fix observers failing in ActiveRecord 3.0.0.beta4+ integrations
* Fix deprecation warning in Rails 3 railtie [Chris Yuan]

== 0.9.0 / 2010-04-12

* Use attribute-based event transitions whenever possible to ensure consistency
* Fix action helpers being defined when the action is *only* defined in the machine's owner class
* Disable attribute-based event transitions in DataMapper 0.9.4 - 0.9.6 when dm-validations is being used
* Add support for DataMapper 0.10.3+
* Add around_transition callbacks
* Fix transition failures during save not being handled correctly in Sequel 2.12.0+
* Fix attribute-based event transitions not hooking in properly in DataMapper 0.10.0+ and Sequel 2.12.0+
* Fix dynamic initial states causing errors in Ruby 1.9+ if no arguments are defined in the block
* Add MongoMapper 0.5.5+ support
* Add ActiveModel 3.0+ support for use with integrations that implement its interface
* Fix DataMapper integration failing when ActiveSupport is loaded in place of Extlib
* Add version dependencies for ruby-graphviz
* Remove app-specific rails / merb rake tasks in favor of always running state_machine:draw
* Add Rails 3 railtie for automatically loading rake tasks when installed as a gem

== 0.8.1 / 2010-03-14

* Release gems via rake-gemcutter instead of rubyforge
* Move rake tasks to lib/tasks
* Dispatch state behavior to the superclass if it's undefined for a particular state [Sandro Turriate and Tim Pope]
* Fix state / event names not supporting i18n in ActiveRecord
* Fix original ActiveRecord::Observer#update not being used for non-state_machine callbacks [Jeremy Wells]
* Add support for ActiveRecord 3.0
* Fix without_{name} scopes not quoting columns in ActiveRecord [Jon Evans]